k8s/apps/keycloak/ingress-host-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rws-keycloak-public
  namespace: iam
spec:
  ingressClassName: nginx
  rules:
    - host: kc.132.220.29.66.nip.io
